add im extention to config for training job

--- a/training-job-config-template.json
+++ b/training-job-config-template.json
@@ -16,7 +16,7 @@
                     "S3DataDistributionType": "FullyReplicated"
                 }
             },
-            "ContentType": "image/jpg"
+            "ContentType": "image/[im_extention]"
         }
     ],
     "OutputDataConfig": {
